data-app/main/default/objects/refrigerator__dlm/fields/FreezerTemperature__c.field-meta.xml
<CustomField>
    <fullName>FreezerTemperature__c</fullName>
    <label>FreezerTemperature</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>FreezerTemperature</labelOverride>
        <masterLabel>FreezerTemperature</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>