data-app/main/default/objects/refrigerator__dlm/fields/FridgeTemperature__c.field-meta.xml
<CustomField>
    <fullName>FridgeTemperature__c</fullName>
    <label>FridgeTemperature</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>FridgeTemperature</labelOverride>
        <masterLabel>FridgeTemperature</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>