data-app/main/default/objects/refrigerator__dlm/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>id</labelOverride>
        <masterLabel>id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>