data-app/main/default/objects/refrigerator__dlm/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <label>timestamp</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>timestamp</labelOverride>
        <masterLabel>timestamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>